--- a/assets/css/templatemo-lava.css
+++ b/assets/css/templatemo-lava.css
@@ -32,10 +32,64 @@ font & reset css
 reset
 --------------------------------------------- 
 */
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, div
-pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q,
-s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li,
-figure, header, nav, section, article, aside, footer, figcaption {
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+div pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+font,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+figure,
+header,
+nav,
+section,
+article,
+aside,
+footer,
+figcaption {
   margin: 0;
   padding: 0;
   border: 0;
@@ -63,13 +117,20 @@ html[xmlns] .clearfix {
   height: 1%;
 }
 
-ul, li {
+ul,
+li {
   padding: 0;
   margin: 0;
   list-style: none;
 }
 
-header, nav, section, article, aside, footer, hgroup {
+header,
+nav,
+section,
+article,
+aside,
+footer,
+hgroup {
   display: block;
 }
 
@@ -77,8 +138,9 @@ header, nav, section, article, aside, footer, hgroup {
   box-sizing: border-box;
 }
 
-html, body {
-  font-family: 'Poppins', sans-serif;
+html,
+body {
+  font-family: "Poppins", sans-serif;
   font-weight: 400;
   background-color: #fff;
   font-size: 16px;
@@ -91,7 +153,12 @@ a {
   text-decoration: none !important;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin-top: 0px;
   margin-bottom: 0px;
 }
@@ -114,7 +181,7 @@ global styles
 html,
 body {
   background: #fff;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 ::selection {
@@ -128,7 +195,8 @@ body {
 }
 
 @media (max-width: 991px) {
-  html, body {
+  html,
+  body {
     overflow-x: hidden;
   }
   .mobile-top-fix {
@@ -147,7 +215,7 @@ a.main-button-slider {
   font-size: 14px;
   border-radius: 25px;
   padding: 15px 25px;
-  background-color: #a8b8d0;
+  background-color: lightgrey;
   text-transform: uppercase;
   color: #fff;
   font-weight: 600;
@@ -188,7 +256,7 @@ button.main-button {
   font-size: 14px;
   border-radius: 25px;
   padding: 15px 25px;
-  background-color: #c0c0c0;
+  background-color: lightgrey;
   text-transform: uppercase;
   color: #fff;
   font-weight: 600;
@@ -202,7 +270,6 @@ button.main-button {
 button.main-button:hover {
   background-color: #92ade4;
 }
-
 
 .center-heading {
   margin-bottom: 70px;
@@ -228,7 +295,6 @@ button.main-button:hover {
   text-align: center;
 }
 
-
 /* 
 ---------------------------------------------
 header
@@ -237,25 +303,25 @@ header
 
 .background-header {
   background-color: #fff;
-  height: 80px!important;
-  position: fixed!important;
+  height: 80px !important;
+  position: fixed !important;
   top: 0px;
   left: 0px;
   right: 0px;
-  box-shadow: 0px 0px 10px rgba(0,0,0,0.15)!important;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15) !important;
 }
 
 .background-header .logo,
 .background-header .main-nav .nav li a {
-  color: #1e1e1e!important;
+  color: #1e1e1e !important;
 }
 
 .background-header .main-nav .nav li:hover a {
-  color: #a8b8d0!important;
+  color: #a8b8d0 !important;
 }
 
 .background-header .nav li a.active {
-  color: #a8b8d0!important;
+  color: #a8b8d0 !important;
 }
 
 .header-area {
@@ -265,10 +331,10 @@ header
   right: 0px;
   z-index: 100;
   height: 100px;
-  -webkit-transition: all .5s ease 0s;
-  -moz-transition: all .5s ease 0s;
-  -o-transition: all .5s ease 0s;
-  transition: all .5s ease 0s;
+  -webkit-transition: all 0.5s ease 0s;
+  -moz-transition: all 0.5s ease 0s;
+  -o-transition: all 0.5s ease 0s;
+  transition: all 0.5s ease 0s;
 }
 
 .header-area .main-nav {
@@ -289,7 +355,6 @@ header
   -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
-
 
 .header-area .main-nav .nav {
   float: left;
@@ -360,7 +425,8 @@ header
   transform: translateY(-2em);
   visibility: hidden;
   z-index: -1;
-  transition: all 0.3s ease-in-out 0s, visibility 0s linear 0.3s, z-index 0s linear 0.01s;
+  transition: all 0.3s ease-in-out 0s, visibility 0s linear 0.3s,
+    z-index 0s linear 0.01s;
 }
 
 .header-area .main-nav .nav li.submenu ul li {
@@ -372,7 +438,7 @@ header
 .header-area .main-nav .nav li.submenu ul li a {
   display: block;
   background: #fff;
-  color: #7a7a7a!important;
+  color: #7a7a7a !important;
   padding-left: 20px;
   height: 40px;
   line-height: 40px;
@@ -386,7 +452,7 @@ header
 }
 
 .header-area .main-nav .nav li.submenu ul li a:before {
-  content: '';
+  content: "";
   position: absolute;
   width: 0px;
   height: 40px;
@@ -402,7 +468,7 @@ header
 
 .header-area .main-nav .nav li.submenu ul li a:hover {
   background: #fff;
-  color: #a8b8d0!important;
+  color: #a8b8d0 !important;
   padding-left: 25px;
 }
 
@@ -554,7 +620,7 @@ header
 @media (max-width: 991px) {
   .logo {
     text-align: center;
-    float: none!important;
+    float: none !important;
   }
   .header-area {
     background-color: #f7f7f7;
@@ -606,7 +672,7 @@ header
   }
   .header-area .main-nav .nav li a:hover {
     background: #eee !important;
-    color: #a8b8d0!important;
+    color: #a8b8d0 !important;
   }
   .header-area .main-nav .nav li.submenu ul {
     position: relative;
@@ -631,12 +697,13 @@ header
     height: auto !important;
   }
   .header-area .main-nav .nav li.submenu:after {
-    color: #3B566E;
+    color: #3b566e;
     right: 25px;
     font-size: 14px;
     top: 15px;
   }
-  .header-area .main-nav .nav li.submenu:hover ul, .header-area .main-nav .nav li.submenu:focus ul {
+  .header-area .main-nav .nav li.submenu:hover ul,
+  .header-area .main-nav .nav li.submenu:focus ul {
     height: 0px;
   }
 }
@@ -647,7 +714,6 @@ header
   }
 }
 
-
 /* 
 ---------------------------------------------
 welcome
@@ -657,15 +723,10 @@ welcome
   width: 100%;
   height: 100vh;
   min-height: 793px;
-  background-image: url(../images/right-bg-decor.png);
+  background-image: url(../images/bg-decor.jpg);
   background-repeat: no-repeat;
-  background-position: right top;
+  background-position: right;
 }
-
-.welcome-area .header-text{
-  backdrop-filter: grayscale(1);
-}
-
 
 .welcome-area .header-text .left-text {
   position: relative;
@@ -685,7 +746,7 @@ welcome
 
 .welcome-area .header-text h1 em {
   font-style: normal;
-  color: #a8b8d0;
+  color: lightgrey;
 }
 
 .welcome-area .header-text p {
@@ -717,9 +778,13 @@ welcome
 
 @media (max-width: 1140px) {
   .welcome-area {
+    background-position: right top;
+    background-position-y: top;
+    background-size: 90%;
+    background-position-y: 10%;
     height: auto;
   }
-  .welcome-area .header-text {       
+  .welcome-area .header-text {
     width: 92%;
     padding-top: 793px;
   }
@@ -737,7 +802,7 @@ welcome
     padding-top: 100%;
     margin-left: 0;
   }
-    
+
   .container-fluid .col-md-12 {
     margin-right: 0px;
     padding-right: 0px;
@@ -756,6 +821,10 @@ about
   z-index: 9;
 }
 
+#about > .container > .row > div {
+  padding: 15px;
+}
+
 @media (max-width: 992px) {
   .features-item {
     margin-bottom: 45px;
@@ -766,7 +835,12 @@ about
   border-radius: 5px;
   padding: 60px 30px;
   text-align: center;
-  box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  transition: all 1s;
+}
+
+.features-item:hover {
+  transform: scale(1.1);
 }
 
 .features-item h2 {
@@ -776,8 +850,7 @@ about
   left: 45px;
   font-size: 100px;
   font-weight: 600;
-  color: #fdefe9;
-  filter: grayscale(1);
+  color: rgba(161, 192, 253, 0.1);
 }
 
 .features-item i {
@@ -786,7 +859,7 @@ about
   font-size: 3.5em;
   margin-bottom: 40px;
   background: linear-gradient(145deg, #92ade4 0%, #c0c0c0 100%);
-  -webkit-text-fill-color: transparent; 
+  -webkit-text-fill-color: transparent;
   background-clip: text;
 }
 
@@ -801,7 +874,6 @@ about
   margin-top: 35px;
   display: inline-block;
 }
-
 
 /*
 ---------------------------------------------
@@ -845,7 +917,6 @@ promotion
 
 #promotion .right-text i {
   display: inline-block;
-  float: left;
   margin-right: 30px;
   font-size: 3.5em;
   background: linear-gradient(145deg, #92ade4 0%, #c0c0c0 100%);
@@ -863,7 +934,6 @@ promotion
   margin-bottom: 15px;
   margin-top: 3px;
 }
-
 
 /*
 --------------------------------------------
@@ -946,7 +1016,7 @@ testimonials
   line-height: 80px;
   text-align: center;
   display: inline-block;
-  background: rgb(244,129,63);
+  background: rgb(244, 129, 63);
   background: linear-gradient(145deg, #92ade4 0%, #c0c0c0 100%);
   position: absolute;
 }
@@ -963,14 +1033,14 @@ testimonials
   line-height: 80px;
   text-align: center;
   display: inline-block;
-  background: rgb(244,129,63);
+  background: rgb(244, 129, 63);
   background: linear-gradient(145deg, #92ade4 0%, #c0c0c0 100%);
   position: absolute;
 }
 
 @media screen and (max-width: 1060px) {
   .owl-carousel .owl-nav {
-    display: none!important;
+    display: none !important;
   }
 }
 
@@ -982,8 +1052,8 @@ footer
 
 @media (max-width: 992px) {
   footer {
-    padding-top: 0px!important;
-    margin-top: 0px!important;
+    padding-top: 0px !important;
+    margin-top: 0px !important;
   }
   .contact-form {
     margin-bottom: 45px;
@@ -992,7 +1062,7 @@ footer
     text-align: center;
   }
   footer .footer-content {
-    padding: 60px 0px!important;
+    padding: 160px 0px 60px 0px !important;
   }
 }
 
@@ -1004,7 +1074,6 @@ footer {
   background-position: center center;
   background-size: cover;
   width: 100%;
-  filter: grayscale(1);
 }
 
 footer .footer-content {
@@ -1017,8 +1086,7 @@ footer .footer-content {
   padding: 45px;
   border-radius: 5px;
   background-color: #fff;
-  box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
-  
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
 footer .right-content {
@@ -1053,11 +1121,13 @@ footer .right-content {
   text-align: center;
 }
 
-.contact-form ::-webkit-input-placeholder { /* Edge */
+.contact-form ::-webkit-input-placeholder {
+  /* Edge */
   color: #7a7a7a;
 }
 
-.contact-form :-ms-input-placeholder { /* Internet Explorer 10-11 */
+.contact-form :-ms-input-placeholder {
+  /* Internet Explorer 10-11 */
   color: #7a7a7a;
 }
 
@@ -1088,7 +1158,7 @@ footer .right-content {
 }
 
 .footer-content .right-content p {
-  color: #FFF;
+  color: #fff;
   margin-bottom: 40px;
 }
 
@@ -1103,7 +1173,7 @@ footer .copyright {
 
 footer .sub-footer {
   padding: 60px 0px;
-  border-top: 1px solid rgba(250,250,250,0.3);
+  border-top: 1px solid rgba(250, 250, 250, 0.3);
   text-align: center;
 }
 
